# wifi_util

./: Cargo.toml  README.md
scripts/: router_build
src/: main.rs
